--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ body {
 }
 .mySlides {display: none}
 .mySlides img {
-    height: 50vh;
+    height: 60vh;
     object-fit: cover;
     }
 .slideshow-container {
     max-width: 100vw;
-    height: 50vh;
+    height: 60vh;
     position: relative;
     margin: auto;
 }
@@ -38,6 +38,7 @@ body {
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
+    background-color: rgba(0,0,0,0.8);
 }
 /* Position the "next button" to the right */
 .next {
@@ -148,8 +149,10 @@ nav ul li a:hover::before {
 }
 /*body*/
 #body{
-    padding: 50px;
+    padding: 100px;
     background: linear-gradient(#206500, #FAFAFA);
+    align-items: center;
+    justify-items: center;
 }
 /*Home Section*/
 .text{
@@ -163,6 +166,14 @@ nav ul li a:hover::before {
     font-size: 32pt;
     text-shadow: 2px 2px 5px black;
     color: var(--headline);
+}
+#effect .headline {
+    align-self:  center;
+    text-align: center;
+    font-family: "Sedan SC", serif;
+    font-size: 32pt;
+    text-shadow: 2px 2px 5px var(--nav-background);
+    color: var(--sub-text);
 }
 .subtitle {
     
@@ -185,33 +196,38 @@ nav ul li a:hover::before {
 }
 
 #myChart {
-    width: 80vw;
+    padding: 50px;
+    width: 75vw;
     height: auto;
     align-self: center;
     padding: 20px;
 }
 
 .dropdown-container{
-  align-self:flex-end;
+    margin: 5;
 }
 .chart_box{
     display: flex;
     justify-content: center;
+    margin: 50px;
+    padding: 50px;
 }
 #grafic {
+    width: 75vw;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 20px;
-    margin-bottom: 50px;
+    margin-bottom: 0px;
 }
 
 #check_boxes {
-    padding-left: 60px;
+    padding-left: 10px;
+    display: flex;
 }
 
 .year_selection {
-    padding: 50px;
+    padding: 20px;
 }
 
 label {
@@ -302,12 +318,12 @@ label {
 }
 .mySlides1 {display: none}
 .mySlides1 img {
-    height: 50vh;
+    height: 60vh;
     object-fit: cover;
     }
 .slideshow-container1 {
     max-width: 100vw;
-    height: 50vh;
+    height: 60vh;
     position: relative;
     margin: auto;
 }
@@ -325,6 +341,7 @@ label {
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
+    background-color: rgba(0,0,0,0.8);
 }
 /* Position the "next button" to the right */
 .next1 {
@@ -367,4 +384,37 @@ label {
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
     .prev1, .next1 {font-size: 11px}
+}
+/*Author - Site*/
+.circle{
+    height: 500px;
+    width: 500px;
+    max-width: 80vw;
+    max-height: 80vw;
+    overflow: hidden;
+    border-radius: 50%;
+    border: 20px solid var(--main-brand-color);
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    justify-items: center;
+}
+.circle img{
+    
+    height:  100%;  
+    align-self: center;
+}
+#split{
+    padding: 50px;
+    align-items: center;
+    display: flex;
+}
+.Info{
+    margin: 50px;
+    padding: 50px;
+}
+.link_logo{
+    width: 95px;
+    height: 91px;
+    margin: 25px;
 }
