--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sedan:ital@0;1&display=swap');
+
 /*Slides*/
 :root {
     --nav-background: #FAFAFA;
@@ -11,19 +12,22 @@
 * {box-sizing: border-box}
 body {
     font-family: Verdana, sans-serif;
-    margin:0;
+    margin: 0;
+    padding: 0;
 }
 .mySlides {display: none}
 .mySlides img {
+    width: 100%;
     height: 60vh;
     object-fit: cover;
-    }
+}
 .slideshow-container {
-    max-width: 100vw;
+    max-width: 100%;
     height: 60vh;
     position: relative;
     margin: auto;
 }
+
 /* Next & previous buttons */
 .prev, .next {
     cursor: pointer;
@@ -101,28 +105,31 @@ main {
 }
 
 header {
-    height: 100px;
+    
     background-color: var(--nav-background);
 }
 
 nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
 }
 
 nav ul {
     list-style: none;
     display: flex;
     justify-content: space-between;
+    padding: 0;
 }
 
 nav ul li {
-    padding: 10px 50px;
+    padding: 10px;
 }
 
 nav ul li a {
     font-family: "Sedan SC", serif;
-    font-size: 32pt;
+    font-size: 2rem;
     color: var(--headline);
     position: relative;
     text-decoration: none;
@@ -147,93 +154,104 @@ nav ul li a:hover::before {
     transform-origin: left;
     transform: scaleX(1);
 }
+
+/* Responsive navigation */
+@media only screen and (max-width: 600px) {
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav ul li {
+        padding: 5px 0;
+    }
+}
+
 /*body*/
-#body{
-    padding: 100px;
+#body {
+    padding: 2rem;
     background: linear-gradient(#206500, #FAFAFA);
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-items: center;
 }
 /*Home Section*/
-.text{
+.text {
     margin-top: 1em;
 }
 /* Headline and subtitle styles */
 .headline {
-    align-self:  center;
     text-align: center;
     font-family: "Sedan SC", serif;
-    font-size: 32pt;
+    font-size: 2rem;
     text-shadow: 2px 2px 5px black;
     color: var(--headline);
 }
 #effect .headline {
-    align-self:  center;
     text-align: center;
     font-family: "Sedan SC", serif;
-    font-size: 32pt;
+    font-size: 2rem;
     text-shadow: 2px 2px 5px var(--nav-background);
     color: var(--sub-text);
 }
 .subtitle {
-    
-    justify-content: center;
-    align-self: center;
     text-align: left;
     font-family: "Sedan", serif;
-    font-size: 20pt;
+    font-size: 1.25rem;
     color: var(--sub-text);
 }
 /*Grafic Section*/
-.section_div{
-    margin: 50px;
+.section_div {
+    margin: 2rem;
     width: 100%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 .Event_Change {
     display: flex;
-    justify-content:space-evenly;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 #myChart {
-    padding: 50px;
     width: 75vw;
-    height: auto;
-    align-self: center;
-    padding: 20px;
+    height: 75vh;
+    padding: 1rem;
 }
 
-.dropdown-container{
-    margin: 5;
+.dropdown-container {
+    margin: 5px;
 }
-.chart_box{
+.chart_box {
     display: flex;
     justify-content: center;
-    margin: 50px;
-    padding: 50px;
+    margin: 2rem;
+    padding: 2rem;
 }
 #grafic {
     width: 75vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
-    margin-bottom: 0px;
+    padding: 1rem;
 }
 
 #check_boxes {
     padding-left: 10px;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .year_selection {
-    padding: 20px;
+    padding: 1rem;
 }
 
 label {
     font-family: "Sedan SC", serif;
-    font-size: 22px;
-    font-weight: bolder;
+    font-size: 1.5rem;
+    font-weight: bold;
     color: var(--background);
 }
 
@@ -243,11 +261,11 @@ label {
 
 .check_box input {
     width: 25px;
-    height: 25px;
+    height: auto;
 }
 
 .year_selection select {
-    height: 25px;
+    height: auto;
     width: 80px;
 }
 /*Event Section*/
@@ -256,10 +274,8 @@ label {
 }
 .timeline-header {
     background-color: #80B640;
-    /* Light green header */
     color: #333;
-    /* Darker text for contrast */
-    padding: 10px 20px;
+    padding: 10px ;
     border-radius: 25px;
     display: inline-block;
     font-size: 1.5em;
@@ -268,8 +284,7 @@ label {
 
 .timeline {
     display: flex;
-    flex-wrap: wrap; /* Umbruch bei Bedarf auf mehrere Zeilen */
-    
+    flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
     gap: 40px;
@@ -277,23 +292,20 @@ label {
 
 .timeline div {
     background-color: #002A00;
-    /* Darker green box */
     color: #C0FF74;
-    /* Light green text */
     padding: 20px;
     border-radius: 100px;
-    position: relative;
     width: 250px;
     height: 250px;
     text-align: center;
 }
-.timeline div h4{
-    font-size: 16pt;
+.timeline div h4 {
+    font-size: 1rem;
 }
-.timeline div p{
-    font-size: 12pt;
+.timeline div p {
+    font-size: 0.75rem;
 }
-.timeline div a{
+.timeline div a {
     color: #000;
     padding: 5px;
     border-radius: 50px;
@@ -302,27 +314,42 @@ label {
 /*Footer*/
 .footer {
     background-color: var(--nav-background);
-    width: 100vw;
-    height: 225px;
-    padding: 0px 0;
+    width: 100%;
+    height: auto;
+    padding: 1rem 0;
     text-align: center;
 }
 
 .footer_logo {
     width: 225px;
     height: 225px;
+    max-width: 100%;
 }
 
 .footer_link {
-    padding-top: 75px;
+    padding-top: 2rem;
 }
+
+/* Responsive Footer */
+@media only screen and (max-width: 600px) {
+    .footer_logo {
+        width: 100px;
+        height: 100px;
+    }
+
+    .footer_link {
+        padding-top: 1rem;
+    }
+}
+
 .mySlides1 {display: none}
 .mySlides1 img {
+    width: 100%;
     height: 60vh;
     object-fit: cover;
-    }
+}
 .slideshow-container1 {
-    max-width: 100vw;
+    max-width: 100%;
     height: 60vh;
     position: relative;
     margin: auto;
@@ -386,7 +413,7 @@ label {
     .prev1, .next1 {font-size: 11px}
 }
 /*Author - Site*/
-.circle{
+.circle {
     height: 500px;
     width: 500px;
     max-width: 80vw;
@@ -399,22 +426,69 @@ label {
     align-self: center;
     justify-items: center;
 }
-.circle img{
-    
-    height:  100%;  
+.circle img {
+    height: 100%;
     align-self: center;
 }
-#split{
+#split {
     padding: 50px;
-    align-items: center;
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.Info{
-    margin: 50px;
-    padding: 50px;
+.Info {
+    margin: 2rem;
+    padding: 2rem;
 }
-.link_logo{
+.link_logo {
     width: 95px;
     height: 91px;
-    margin: 25px;
+    margin: 1rem;
+}
+/*-----------------------------------------*/
+.chart-container {
+    width: 80%;
+    margin: auto;
+    margin-top: 50px;
+}
+
+/* Media Queries für Responsivität */
+
+@media only screen and (max-width: 768px) {
+    .chart-container {
+        width: 100%;
+        margin-top: 20px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .chart-container {
+        width: 100%;
+        margin-top: 20px;
+    }
+}
+
+/* Stile für die Legende und Achsenbeschriftungen anpassen */
+
+.chart-container .chartjs-size-monitor {
+    overflow: hidden !important;
+    z-index: -1 !important;
+}
+
+@media screen and (max-width: 768px) {
+    .chart-container .chartjs-size-monitor, .chart-container #myChart {
+        width: 100% !important;
+    }
+}
+
+@media screen and (max-width: 568px) {
+    .chart-container .chartjs-size-monitor, .chart-container #myChart {
+        width: 100% !important;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .chart-container .chartjs-size-monitor, .chart-container #myChart {
+        width: 100% !important;
+    }
 }
