--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sedan:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
 
 /*Slides*/
 :root {
@@ -169,7 +170,7 @@ nav ul li a:hover::before {
 
 /*body*/
 #body {
-    padding: 2rem;
+    padding: 4rem;
     background: linear-gradient(#206500, #FAFAFA);
     display: flex;
     flex-direction: column;
