--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ nav ul {
 }
 
 nav ul li {
-    padding: 10px;
+    padding: 0 5rem ;
 }
 
 nav ul li a {
@@ -157,7 +157,7 @@ nav ul li a:hover::before {
 }
 
 /* Responsive navigation */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 780px) {
     nav ul {
         flex-direction: column;
         align-items: center;
